improve locking semantics, add more tests
Signed-off-by: Mohit Godwani <mgodwan@amazon.com>